LIST OF CHANGES
---------------

 - pipeline-specific function lists
 - olb flag removed, use '--function_list olb' option instead
 - unused pipeline flags and options removed

release 48.0
 - if LIMS cached data creation fails, pipeline script fails before submitting jobs:
     removed spider function from function order for both analysis and archival pipelines;
     introduced spider boolean flag that defaults to true;
     spider is run within prepare() method before the functions are executed
 - removed test and live section in configuration files
 - removed configuration for external script names
 - 'PB_cal_bam' analysis pipeline renamed to 'central'

release 47.9.1
 - Fixed split sanity checks

release 47.9
 - analysis daemon patch: ensure runfolder glob expressions are used when finding the runfolder path
 - use samtools1 (rather than samtools1_1) for samtools in archival and P4 pipelines

release 47.8.1
 - workaround bug: daemon missing new warehouse access

release 47.8
 - GCLP compliance-related daemon changes:
     runs will not be progressed to analysis/archival unless the
     flowcell barcode is set in the npg_tracking database;
     runs are not going to be progressed if it's impossible to fetch LIMs data for a flowcell;
     both analysis and archival daemon to pass runfolder path to the
     pipeline script;
     if batch_id is available, pass it to the analysis pipeline script    
 - use appropriate driver for samplesheet generation (xml, warehouse, ml_warehouse)
 - GCLP compliance-related pipeline changes:
     get the flowcell barcode needed for
     accessing LIMs information from runfolder path/content;
     use batch id if provided by the caller;
     derive the run id from runfolder path/content
 - check for RTA run tag is dropped in the analysis daemon - all current runs are RTA
 - use alt_process flag when archiving qc runs

release 47.7
 - switch seqchksum_comparator to cram, add new test data and updated tests